<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentJobDetails">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="411dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Job Details"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout14"
        android:layout_width="409dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Job title"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/EditText_JT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout15"
        android:layout_width="409dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout14">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Company"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/EditText_Comp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout16"
        android:layout_width="409dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout15">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Location"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/Spinner_Loc"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout17"
        android:layout_width="409dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout16">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Cost of living"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/TextView_COL"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout18"
        android:layout_width="409dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout17">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Yearly salary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/EditText_YS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout19"
        android:layout_width="409dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout18">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Signing bonus"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/EditText_SB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout20"
        android:layout_width="409dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout19">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Yearly bonus"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/EditText_YB"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout21"
        android:layout_width="409dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout20">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Retirement benefits"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/EditText_RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout22"
        android:layout_width="409dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout21">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="18dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Leave time"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/EditText_LT"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout22">

        <Button
            android:id="@+id/save_bt_cjd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Save" />

        <Button
            android:id="@+id/exit_bt_cjd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="mainMenu"
            android:text="Exit" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>