...
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/cjd_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="jobDetails"
            android:text="Current job details"
            android:textSize="30sp" />
    </LinearLayout>
...
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="1dp">

        <Button
            android:id="@+id/jo_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="jobOffers"
            android:text="Job offer"
            android:textSize="30sp" />
    </LinearLayout>
...
