...
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/Enter_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="EnterJob"
            android:text="Enter job details"
            android:textSize="30sp" />

...
